2003-07-17  Richard Hult  <richard@imendio.com>

	* gnome-settings-typing-break.c (setup_typing_break): Start with
	-n to avoid the warning about notification area.
	(gnome_settings_typing_break_init): Fix a warning.

2003-07-07  Jody Goldberg <jody@gnome.org>

	* Release 2.3.4

2003-07-03  Bastien Nocera  <hadess@hadess.net>

	* gnome-settings-keybindings.c: (get_screens_list),
	(screen_exec_display_string), (grab_key), (do_grab),
	(gnome_settings_keybindings_load): grab keys on all the screens for the
	current display

Thu Jun 26 07:37:20 2003  Jonathan Blandford  <jrb@gnome.org>

	* gnome-settings-typing-break.c: new module to handle the
	typing-break-monitor.

2003-06-24  Jody Goldberg <jody@gnome.org>

	* Release 2.3.3

2003-06-12  Michael Meeks  <michael@ximian.com>

	* Makefile.am: Make IDL compile depend on compiler too.

Mon Jun  2 13:23:25 2003  Jonathan Blandford  <jrb@redhat.com>

	* gnome-settings-xrdb.c (append_xresources): Patch from Jens
	Granseuer <jensgr@gmx.net> to fix on non-C99 compilers.

2003-05-07  Jody Goldberg <jody@gnome.org>

	* Release 2.3.1

2003-05-07  Jody Goldberg <jody@gnome.org>

	* xrdb/Makefile.am (EXTRA_DIST) : EXTRA_DIST the data files

2003-05-02  Ross Burton  <ross@burtonini.com>

	* gnome-settings-xrdb.c (scan_for_files): 
	If ~/.gnome2/xrdb doesn't exist, don't stop.

	* xrdb/.cvsignore:
	Added.

2003-05-02  Ross Burton  <ross@burtonini.com>

	* xrdb/Makefile.am (xrdbdir):
	$(datadir) is lowercase not uppercase! :(

2003-05-01  Ross Burton  <ross@burtonini.com>

	* gnome-settings-xrdb.[ch]:
	Using the current GTK+ theme as a base for colours, set a bunch of
	properties in the X resource database. And as if by magic, legacy
	apps (Xaw, Tk, Motif) match GNOME!

	* xrdb/*.ad:
	Data files for above.

Thu Feb  6 16:43:33 2003  Jonathan Blandford  <jrb@redhat.com>

	* gnome-settings-font.c (load_xcursor_theme): handle xcursor so
	that we support Xcursor files.

	* gnome-settings-daemon.c: move