@@ -1,3 +1,14 @@
+Thu Jul 31 14:22:38 2003  Jonathan Blandford  <jrb@redhat.com>
+
+	* gnome-settings-xsettings.c (translate_string_string_toolbar):
+	Patch from Anders Carlsson to special case "both-horiz".
+
+Thu Jul 31 14:06:51 2003  Jonathan Blandford  <jrb@redhat.com>
+
+	* gnome-settings-mouse.c: Patch from Satyajit Kanungo
+	<satyajit.kanungo@wipro.com> to make locate pointer work in
+	a multi-screen environment.
+
 2003-07-17  Richard Hult  <richard@imendio.com>
 
 	* gnome-settings-typing-break.c (setup_typing_break): Start with
